argocd/apps/monitoring/prometheus/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: authelia-forwardauth-authelia@kubernetescrd
  name: prometheus-ingress
  namespace: monitoring
spec:
  rules:
  - host: prometheus.masterloft.k8s.marcel-lambacher.de
    http:
      paths:
      - backend:
          service:
            name: prometheus
            port:
              number: 9090
        path: /
        pathType: Prefix
  # TLS is deactived in ingress, since default cert of traefik will take care of it (TLS per default)
  # tls:
  # - hosts:
  #   - podinfo.masterloft.k8s.marcel-lambacher.de
    
status:
  loadBalancer: {}
